Fixed Spacing On Contact Page
- Made it so the "Free Quotes" text does not take up as much space is it did before

--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,10 @@ h3.card-title{
   color: rgb(118, 15, 187);
 }
 
+.contact-desc {
+  display: inline;
+}
+
 .submit-button {
   font-weight: 100;
   color: white;
